fix: resolves #742 - removed float property from person image - slightly reorganized node--person.tpl.php template     - wrapped almost everything in a div.row.person-container     - .person-container class on screens wider than 786px (bootstrap's sm sixe and larger) has flex-direction: column to keep person image on right side of screen.     - .person-container class on screens narrower than 786px (bootstrap's xs screen size) flex-direction: column to display everything as column with person image on top. - put person image (img tag) into its own div.person-photo with bootstrap column widths for responsiveness - put all other person info into another div with bootstrap column widths for responsiveness

--- a/modules/features/people_content_type/scss/people_content_type.scss
+++ b/modules/features/people_content_type/scss/people_content_type.scss
@@ -75,22 +75,20 @@ span.responsive-label {
 
 /* NODE VIEW */
 
-.person-photo img.image-medium,
-.person-photo img.image-small {
-  float: right;
-  margin: 0 0 20px 20px;
-  max-width:320px;
-  height: auto;
+.person-container {
+  flex-direction: row-reverse;
 
-  @media screen and (max-width:960px) and (min-width:420px) {
-    max-width:180px;
-  }
-  @media screen and (max-width:419px) {
-    max-width:120px;
-    float:none;
-    margin: 0 0 20px;
+  @media screen and (max-width: 786px) {
+    flex-direction: column;
   }
 }
+
+.person-photo img.image-medium,
+.person-photo img.image-small {
+  width: 100%;
+  height: auto;
+}
+
 
 /**
  * Responsive tables.
